[package]
name = "lazydb"
version = "0.1.0"
description = "A lazydocker-inspired database TUI written in Rust"
authors = ["alireza19 <44626094+alireza19@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate", "tls-rustls"] }
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
url = "2.5.7"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tui-textarea = "0.7"
unicode-width = "0.2"
tui-logger = { version = "0.17.4", features = ["tracing-support"] }
tui-tree-widget = "0.23.1"
directories = "6.0.0"
toml = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
